# donald

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .vimrc  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  example.py  example.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tasks.py  test.py
.github/workflows/: release.yml  tests.yml
donald/: __init__.py  __main__.py  _compat.py  backend.py  core.py  manager.py  queue.py  scheduler.py  tasks.py  types.py  utils.py  worker.py
octopus/: __init__.py  core.py  queue.py  utils.py  worker.py
requirements/: requirements-redis.txt  requirements-tests.txt  requirements.txt
tests/: conftest.py  tasks.py  test__base.py  test__schedule.py  test__worker.py  test_amqp.py  test_backend.py  test_base.py  test_cli.py  test_donald.py  test_memory.py  test_octopus.py  test_redis.py  test_schedule.py  test_worker.py
