[project]
name = "donald"
version = "2.0.0"
description = "Task manager for asyncio"
readme = "README.rst"
requires-python = ">=3.9"
license = { "text" = "MIT License" }
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["asyncio", "tasks", "queue"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
]
dependencies = [
  "aio-pika      >= 9.5.5",
  "click         >= 6.7",
  "crontab       >= 0.22.0",
  "async-timeout;python_version<'3.11'",
  "typing_extensions;python_version<'3.11'",
]

[project.urls]
homepage = "https://github.com/klen/donald"
repository = "https://github.com/klen/donald"

[project.scripts]
donald = "donald.__main__:main"

[project.optional-dependencies]
tests = ["redis", "types-redis", "pytest", "pytest-aio", "pytest-mypy", "pytest-redislite", "ruff"]
dev = ["pre-commit", "bump2version"]
redis = ["redis"]

[tool.setuptools]
packages = ['donald']

[tool.setuptools.package-data]
donald = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-xsvl"

[tool.mypy]
packages = ["donald"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests
"""

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "example.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "ASYNC",
  "COM",
  "D",
  "DJ",
  "E731",
  "EM",
  "N804",
  "PLR2004",
  "RET",
  "RSE",
  "S101",
  "SLF",
  "TRY",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "TRY", "F", "PGH", "PLR", "PLW", "PTH", "SIM", "ERA", "RET504", "T20"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
preview = true
