[wheel]
python-tag = py3

[metadata]
name = donald
version = attr: donald.__version__
url = https://github.com/klen/donald
description = Donald is here
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, tasks, queue
project_urls = 
    Documentation = https://klen.github.io/donald
    Source code = https://github.com/klen/donald
    Issue tracker = https://github.com/klen/donald/issues
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = donald
python_requires = >= 3.7
include_package_data = True
install_requires = 
    aioamqp     >= 0.14.0
    click       >= 6.7
    crontab     >= 0.22.0

[options.package_data]
donald = 
    py.typed

[options.entry_points]
console_scripts = 
    donald = donald.__main__:main

[options.extras_require]
tests = 
    pytest
    pytest-aio

[pylama]
linters = pep8,pyflakes
ignore = D211,D213

[pylama:tests/*]
ignore = D

[tool:pytest]
addopts = -xslv
